# advent2023

./: .gitignore  Cargo.toml  README.md
benches/: power_benchmark.rs
ocaml/: day1.ml
rust/src/: main.rs  solutions.rs  utils.rs
src/: main.rs  solutions.rs  utils.rs
src/solutions/: day_eight.rs  day_five.rs  day_four.rs  day_nine.rs  day_one.rs  day_seven.rs  day_six.rs  day_three.rs  day_two.rs
